chore: add memory for maven
Getting out of memory errors on Maven build on Jenkins.